--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ canvas{margin: 5px;margin-right: 5px ; margin-left: 0px;}
 border: 1px solid blue;
 }
 #moves{
-	height:40px;
+	
 }
 #planes0
 {
@@ -47,7 +47,9 @@ outline: 4px solid blue;
   display: flex;
    justify-content: center;
   }
-  
+   #container1{
+	    flex-direction: column;
+   }
   .for_paste
   {
   border: none;
